Fixed project card scrollbar
Added margin to project class to move overflow scrollbar off of rounded
corners of parent div. Looks much better now, but I need to play around
with the styling a bit more.

--- a/New/css/main.css
+++ b/New/css/main.css
@@ -246,6 +246,7 @@ h3 {
     overflow: auto;
     /* border-radius: 30px; */
     padding: 1em;
+    margin: 20px;
 }
 
 .projectResponsibilitiesHeader {
